# leopays.cdt

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  docs.json
docker/: .environment  docker-compose-latest.yml  docker-compose.yml  install_deb.sh
docs/: 02_installation.md  08_troubleshooting.md  index.md
docs/03_command-reference/: abidiff.md  abigen.md  cc.md  cpp.md  init.md  ld.md
docs/05_best-practices/: 03_resource-planning.md  04_data-design-and-migration.md  05_securing_your_contract.md  07_error_handling.md  10_native-tester-compilation.md  11_debugging_a_smart_contract.md  12_binary-extension.md
docs/05_best-practices/08_abi/: 01_abi-code-generator-attributes-explained.md  02_manually_write_an_ABI_file_explained.md
docs/06_how-to-guides/: 04_how_to_create_and_use_action_wrappers.md
docs/06_how-to-guides/01_compile/: 01_compile-a-contract-via-cli.md  02_how-to-configure-cmake.md
docs/09_tutorials/: 01_binary-extension.md  02_abi-variants.md
examples/hello/: CMakeLists.txt  README.txt
examples/multi_index_example/: CMakeLists.txt  README.txt
examples/multi_index_example/src/: CMakeLists.txt
examples/send_inline/: CMakeLists.txt  README.txt
examples/singleton_example/: CMakeLists.txt  README.txt
examples/singleton_example/src/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/eosiolib/: crypto.cpp
modules/: ClangExternalProject.txt  InstallCDT.cmake  LeoPaysCDTMacros.cmake.in  LeoPaysWasmToolchain.cmake.in  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  leopays.cdt-config.cmake
scripts/: build.sh  build_amazon.sh  build_centos.sh  build_darwin.sh  build_fedora.sh  build_ubuntu.sh  generate_bottle.sh  generate_tarball.sh  install.sh  uninstall.sh
scripts/ricardian/: ricardian.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  codegen_tests.cpp
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  rope_tests.cpp  serialize_tests.cpp  string_tests.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  eosio-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  eosio-abigen.cpp.in
tools/cc/: CMakeLists.txt  eosio-cc.cpp.in  eosio-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/init/: CMakeLists.txt  eosio-init.cpp
tools/ld/: CMakeLists.txt  eosio-ld.cpp.in
tools/toolchain-tester/: README.md  tests.py
(+58 files in other folders)
